--- a/JWTCommonLibForDotNetCore.csproj
+++ b/JWTCommonLibForDotNetCore.csproj
@@ -20,6 +20,10 @@
     <Compile Remove="Migrations\20190618094358_JWTCommonLibForDotNetCore.Database.IdentityContext.Designer.cs" />
     <Compile Remove="Migrations\20190618094935_JWTCommonLibForDotNetCore.Database.IdentityContext.cs" />
     <Compile Remove="Migrations\20190618094935_JWTCommonLibForDotNetCore.Database.IdentityContext.Designer.cs" />
+    <Compile Remove="Migrations\20190618095036_JWTCommonLibForDotNetCore.Database.IdentityContext.cs" />
+    <Compile Remove="Migrations\20190618095036_JWTCommonLibForDotNetCore.Database.IdentityContext.Designer.cs" />
+    <Compile Remove="Migrations\20190618141241_JWTCommonLibForDotNetCore.Database.IdentityContext.cs" />
+    <Compile Remove="Migrations\20190618141241_JWTCommonLibForDotNetCore.Database.IdentityContext.Designer.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
